--- a/po/pl.po
+++ b/po/pl.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.28.2\n"
+"Project-Id-Version: gstreamer 0.10.29.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 14:09+0100\n"
-"PO-Revision-Date: 2010-04-27 20:35+0200\n"
+"POT-Creation-Date: 2010-07-06 20:30+0100\n"
+"PO-Revision-Date: 2010-06-28 09:46+0200\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "Language: pl\n"
@@ -638,33 +638,36 @@ msgstr ""
 "miejsce wewnątrz miejscowości, w którym utwór został nagrany lub "
 "wyprodukowany (np. dzielnica)"
 
-#, fuzzy
 msgid "geo location movement speed"
-msgstr "długość geograficzna"
+msgstr "prędkość zmiany położenia geograficznego"
 
 msgid ""
 "movement speed of the capturing device while performing the capture in m/s"
-msgstr ""
+msgstr "prędkość ruchu urządzenia nagrywającego w trakcie nagrania (m/s)"
 
-#, fuzzy
 msgid "geo location movement direction"
-msgstr "wysokość n.p.m."
+msgstr "kierunek zmiany położenia geograficznego"
 
 msgid ""
 "indicates the movement direction of the device performing the capture of a "
 "media. It is represented as degrees in floating point representation, 0 "
 "means the geographic north, and increases clockwise"
 msgstr ""
+"określenie kierunku ruchu urządzenia nagrywającego w stopniach (w notacji "
+"zmiennoprzecinkowej); 0 oznacza geograficzną północ, rośnie zgodnie z ruchem "
+"wskazówek zegara"
 
-#, fuzzy
 msgid "geo location capture direction"
-msgstr "wysokość n.p.m."
+msgstr "kierunek geograficzny urządzenia nagrywającego"
 
 msgid ""
 "indicates the direction the device is pointing to when capturing  a media. "
 "It is represented as degrees in floating point  representation, 0 means the "
 "geographic north, and increases clockwise"
 msgstr ""
+"określenie kierunku, w jakim było skierowane urządzenie nagrywające w "
+"trakcie nagrania - w stopniach, w notacji zmiennoprzecinkowej; 0 oznacza "
+"geograficzną północ, rośnie zgodnie z ruchem wskazówek zegara"
 
 #. TRANSLATORS: 'show name' = 'TV/radio/podcast show name' here
 msgid "show name"
@@ -727,24 +730,23 @@ msgstr ""
 "utwór"
 
 msgid "device manufacturer"
-msgstr ""
+msgstr "producent urządzenia"
 
-#, fuzzy
 msgid "Manufacturer of the device used to create this media"
-msgstr "wersja kodera użyta do zakodowania tego strumienia"
+msgstr "Producent urządzenia użytego do utworzenia tego nagrania"
 
 msgid "device model"
-msgstr ""
+msgstr "model urządzenia"
 
-#, fuzzy
 msgid "Model of the device used to create this media"
-msgstr "wersja kodera użyta do zakodowania tego strumienia"
+msgstr "Model urządzenia użytego do utworzenia tego nagrania"
 
 msgid "image orientation"
-msgstr ""
+msgstr "orientacja obrazu"
 
 msgid "How the image should be rotated or flipped before display"
 msgstr ""
+"W jaki sposób obraz powinien być obrócony lub odbity przed wyświetleniem"
 
 msgid ", "
 msgstr ", "
@@ -1108,9 +1110,8 @@ msgstr "PLIK"
 msgid "Do not install a fault handler"
 msgstr "Nie instalowanie obsługi błędów"
 
-#, fuzzy
 msgid "Do not install signal handlers for SIGUSR1 and SIGUSR2"
-msgstr "Nie instalowanie obsługi błędów"
+msgstr "Nieinstalowanie obsługi sygnałów SIGUSR1 i SIGUSR2"
 
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Wypisanie śladu alokacji (jeśli został włączony w czasie kompilacji)"
